hphp/hack/test/typecheck/xhp/generic_attr_constraint.php.exp
File "generic_attr_constraint.php", line 8, characters 4-9:
Some type constraint(s) here are violated (Typing[4110])
File "generic_attr_constraint.php", line 3, characters 15-15:
'T' is a constrained type
File "generic_attr_constraint.php", line 3, characters 20-22:
This is a num (int/float)
File "generic_attr_constraint.php", line 8, characters 15-17:
It is incompatible with a string
